--- a/index.html
+++ b/index.html
@@ -146,9 +146,9 @@
        <a href="https://nh-kim.github.io/all/" class="active">all</a>
         <a href="https://nh-kim.github.io/newjins/">Newjins</a>
         <a href="https://nh-kim.github.io/aespa/">Aespa</a>
-        <a href="https://nh-kim.github.io/aespa/">ive</a>
-        <a href="https://nh-kim.github.io/aespa/">ateez</a>
-        <a href="https://nh-kim.github.io/aespa/">tws</a>
+        <a href="https://nh-kim.github.io/ive/">ive</a>
+        <a href="https://nh-kim.github.io/ateez/">ateez</a>
+        <a href="https://nh-kim.github.io/tws/">tws</a>
     </nav>
     <div class="album-description">
         <p>아이브 - 해야</p>
